--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,16 @@
 :root {
   --background: #0a0a0a;
   --foreground: #ededed;
+  --countdown-bg: #1a1111;
+  --countdown-foreground: rgb(253, 128, 117);
+  --red-bg: rgb(113, 13, 18);
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  height: 100vh;
 }
 
 body {
@@ -15,10 +19,18 @@ body {
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  display: flex;
 
   justify-content: center;
-  margin-top: 2rem;
+}
+
+main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  max-width: 1440px;
+  width: 100%;
+  gap: 1rem;
 }
 
 * {
