--- a/src/components/TimeSquare/TimeSquare.module.css
+++ b/src/components/TimeSquare/TimeSquare.module.css
@@ -1,17 +1,35 @@
 .container {
-  background-color: grey;
-  padding: 1.25rem;
-  border-radius: 0.75rem;
 }
 
 .timeUnit {
-  font-size: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--countdown-bg);
+  color: var(--countdown-foreground);
+  padding: 1.25rem;
+  border-radius: 0.75rem;
   font-weight: bold;
   text-align: center;
+  height: 5.625rem;
+  width: 5.625rem;
+}
+
+.timeValue {
+  font-size: 3rem;
+  display: inline;
+  align-items: center;
+  justify-content: center;
+  padding-top: 4px;
+  text-shadow: 0px 0px 8px rgba(255, 0, 0, 0.454);
 }
 
 .timeLabel {
-  font-size: 16px;
+  font-size: 1rem;
   text-align: center;
   margin-top: 8px;
+}
+
+.timeLabel h3 {
+  font-weight: 400;
 }
