feat: add Introduction component and update styles for ContactButton and Hero components

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,8 @@
   --countdown-bg: #1a1111;
   --countdown-foreground: rgb(253, 128, 117);
   --red-bg: rgb(134, 11, 18);
+  --red: rgb(207, 0, 0);
+  --light-red: rgb(255, 46, 46);
 }
 
 html,
