--- a/src/components/ContactButton/ContactButton.module.css
+++ b/src/components/ContactButton/ContactButton.module.css
@@ -6,10 +6,10 @@
 }
 
 .button {
-  border: none;
+  border: 1px solid var(--red);
   background: var(--red-bg);
   color: var(--foreground);
-  padding: 0.75rem 1.5rem;
+  padding: 0.75rem 5rem;
   border-radius: 0.5rem;
   cursor: pointer;
   font-size: 1.125rem;
