--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -9,11 +9,12 @@
   font-size: 4rem;
   font-weight: bold;
   margin-bottom: 0.75rem;
-  letter-spacing: 0.125rem;
+
   margin-top: 2rem;
 }
 
 .subtitle {
-  font-size: 1.5rem;
-  font-weight: normal;
+  font-size: 1.25rem;
+  font-weight: 300;
+  letter-spacing: -0.25px;
 }
