--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   height: 100vh;
+  width: 100%;
 }
 
 body {
@@ -33,6 +34,7 @@ main {
   max-width: 1440px;
   width: 100%;
   gap: 1rem;
+  margin: 0 auto;
 }
 
 * {
