--- a/src/components/Introduction/Introduction.module.css
+++ b/src/components/Introduction/Introduction.module.css
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+  flex-direction: column;
   max-width: 1200px;
   padding: 0 5rem;
   font-size: 1.125rem;
@@ -10,6 +11,13 @@
   line-height: 1.5;
   gap: 0.5rem;
   margin-top: 5rem;
+}
+
+.innerContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .avatar {
@@ -62,4 +70,43 @@
 
 .description strong {
   color: var(--light-red);
+}
+
+.stats {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  gap: 2rem;
+  margin-top: 3rem;
+  margin-bottom: 1rem;
+  padding: 1rem;
+
+  border: 1px solid var(--red);
+  border-radius: 0.75rem;
+  box-shadow: 0px 0px 4px var(--red);
+
+  svg {
+    width: 3rem;
+    height: 3rem;
+    color: var(--light-red);
+  }
+}
+
+.stat {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex: 1;
+  text-align: center;
+}
+
+.strong {
+  color: var(--light-red);
+  font-size: 1.75rem;
+}
+
+.text {
+  text-align: center;
 }
