--- a/src/components/TimeSquare/TimeSquare.module.css
+++ b/src/components/TimeSquare/TimeSquare.module.css
@@ -6,7 +6,9 @@
   align-items: center;
   justify-content: center;
   background-color: var(--countdown-bg);
-  color: var(--countdown-foreground);
+  color: var(--light-red);
+  border: 1px solid #fc00001f;
+  box-shadow: 0px 0px 8px rgba(255, 0, 0, 0.096);
   padding: 1.25rem;
   border-radius: 0.75rem;
   font-weight: bold;
@@ -20,7 +22,7 @@
   display: inline;
   align-items: center;
   justify-content: center;
-  text-shadow: 0px 0px 8px rgba(255, 0, 0, 0.454);
+  text-shadow: 0px 0px 8px rgba(255, 0, 0, 0.655);
 }
 
 .timeLabel {
