--- a/src/components/TimeSquare/TimeSquare.module.css
+++ b/src/components/TimeSquare/TimeSquare.module.css
@@ -5,10 +5,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--countdown-bg);
+  background: linear-gradient(180deg, #000000 0%, rgb(45, 0, 0) 100%);
   color: var(--light-red);
-  border: 1px solid #fc00001f;
-  box-shadow: 0px 0px 8px rgba(255, 0, 0, 0.096);
+  box-shadow: 0px 0px 8px rgba(98, 0, 0, 0.096);
   padding: 1.25rem;
   border-radius: 0.75rem;
   font-weight: bold;
