--- a/src/components/ContactButton/ContactButton.module.css
+++ b/src/components/ContactButton/ContactButton.module.css
@@ -112,3 +112,8 @@
   background: var(--red);
   box-shadow: 0px 0px 8px var(--red);
 }
+
+.submit:disabled {
+  background: #171010;
+  cursor: not-allowed;
+}
