--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
   border-top: 1px solid rgba(255, 255, 255, 0.04);
-  padding: 1.25rem 0;
+  padding: 1.25rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -106,5 +106,17 @@
   .right {
     text-align: left;
     align-items: flex-start;
+  }
+}
+
+@media (max-width: 425px) {
+  .inner {
+    justify-content: center;
+  }
+  .left,
+  .right {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 }
