--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -18,3 +18,13 @@
   font-weight: 300;
   letter-spacing: -0.25px;
 }
+
+@media (max-width: 425px) {
+  .title {
+    font-size: 2.5rem;
+  }
+
+  .subtitle {
+    font-size: 1rem;
+  }
+}
