--- a/src/components/ProfileModal/ProfileModal.module.css
+++ b/src/components/ProfileModal/ProfileModal.module.css
@@ -239,12 +239,16 @@
   }
 
   .card {
-    padding: 1rem;
+    padding: 0.5rem;
 
     svg {
       width: 2.75rem;
       height: 2.75rem;
     }
+  }
+
+  .card h2 {
+    margin-top: 0rem;
   }
 }
 
@@ -260,6 +264,10 @@
       width: 3rem;
       height: 3rem;
     }
+  }
+
+  .card h2 {
+    margin-top: 0.5rem;
   }
 
   .modal {
